[project]
name = "imagekit-mcp-server"
version = "1.0.0"
description = "ImageKit Public MCP Server - exposes search_docs and transformation_builder tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "mcp[cli]"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyrefly"
]

[tool.pyrefly]
search_path = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
